[chore] Add context and enhance user experience on project journey

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,47 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "simple-import-sort/imports": [
+      "error",
+      {
+        "groups": [
+          ["^next", "^next\\/.*", "^swr.*"],
+          ["^react", "^react-.*", "^react.*"],
+          [
+            "^(?!(@fortawesome|assets|components|consts|pages|styles|hooks|contexts|utils|middleware|\\.\\./|\\./)).*$"
+          ],
+          ["^@fortawesome/.*$"],
+          [
+            "^components\\/.*",
+            "^pages\\/.*",
+            "^middleware\\/.*",
+            "^hooks\\/.*",
+            "^contexts\\/.*",
+            "^utils\\/.*",
+            "^consts",
+            "^consts\\/.*",
+            "^styles\\/.*",
+            "^assets\\/.*"
+          ],
+          ["^\\.\\.(?!/?$)", "^\\.\\./?$"],
+          ["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"]
+        ]
+      }
+    ],
+    "simple-import-sort/exports": "error",
+    "import/first": "error",
+    "import/newline-after-import": "error",
+    "import/no-duplicates": "error"
+  }
 }
