--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "eslint.enable": false,
+    "eslint.debug": false,
+    "vs-code-prettier-eslint.prettierLast": true
 }
