--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@babel/preset-typescript": "^7.25.7",
     "@babel/standalone": "^7.25.8",
     "clsx": "^2.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "iconsax-react": "^0.0.8",
+    "lodash-es": "^4.17.21",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/babel__standalone": "^7.1.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
