--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "iconsax-react": "^0.0.8",
+    "js-beautify": "^1.15.1",
     "lodash-es": "^4.17.21",
     "next": "14.2.15",
     "react": "^18",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/babel__standalone": "^7.1.7",
+    "@types/js-beautify": "^1.14.3",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
