--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "lodash-es": "^4.17.21",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-code-blocks": "^0.1.6",
+    "react-dom": "^18",
+    "react-modal": "^3.16.1",
+    "sass": "^1.80.5"
   },
   "devDependencies": {
     "@types/babel__standalone": "^7.1.7",
@@ -32,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
